--- a/themes/nightfall/layouts/index.html
+++ b/themes/nightfall/layouts/index.html
@@ -17,6 +17,9 @@
 
         <div class="content vertical">
             <main class="main">
+                <div class="image-container">
+                    <img src="home.png"  alt="{{ .Site.Params.title }}"/>
+                </div>
                 <div class="indexWrapper">
                     <div>
                         <h1 class="indexHeader">{{ .Site.Params.title }}</h1>
